/**
 * Sample React Native App
 * https://github.com/facebook/react-native
 * @flow
 */

import React, { Component } from 'react';
import {
  Platform,
  StyleSheet,
  Text,
  View,
  Button,
} from 'react-native';


const instructions = Platform.select({
  ios: 'Press Cmd+R to reload,\n' +
    'Cmd+D or shake for dev menu',
  android: 'Double tap R on your keyboard to reload,\n' +
    'Shake or press menu button for dev menu',
});

type Props = {};
export default class App extends Component<Props> {

    state = {
      count: 0,
    }

  render() {
      return (
        <View style={styles.container}>
          <Button title="Increment" testID={"increment"} onPress={() => this.setState({ count: this.state.count + 1})} />
          <Button title="Decrement" testID={"decrement"} onPress={() => this.setState({ count: this.state.count - 1})} />
          <Text testID={"count"}>{this.state.count}</Text>
        </View>
      );
  }
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
    backgroundColor: '#fff',
    alignItems: 'center',
    justifyContent: 'center',
  },
});
